Version 0.4.3
-------------
* Add null noise helper (Thanks @xrmx)
* Test against Django 1.7b4
* Added Spanish translations (Thanks @dragosdobrota)
* Massive cleanup (pep8, translations)
* Support for transparent background color. (Thanks @curaloucura)


Version 0.4.2
-------------
* Added autocomplete="off" to the input (Issue #57, thanks @Vincent-Vega)
* Fixed the format (msgfmt -c) of most PO and MO files distributed with the project
* Added Bulgarian translations. (Thanks @vstoykov)
* Added Japanese translations. (Thanks, Keisuke URAGO)
* Added Ukrainian translations. (Thanks, @FuriousCoder)
* Added support for Python 3.2. (Thanks, @amrhassan)

Version 0.4.1
-------------
* Dropped support for Django 1.3
* Fixed support of newer versions of Pillow (2.1 and above. Pillow 2.2.2 is now required) Thanks @viaregio (Issue #50)

Version 0.4.0
-------------
* Perfom some tests at package installation, to check whether PIL or Pillow are already installed. (Issue #46)
* Added Slovak translations. (Thanks @ciklysta)

Version 0.3.9
-------------
* Run most tests both with a regular Form and a ModelForm, to avoid regressions such as Issue #40
* Handle the special case where CaptchaFields are instantiated with required=False (Issue #42, thanks @DrMeers)
* Fixed a misspelled setting, we now support both spellings, but the docs suggest the correct one (Issue #36, thanks @sayadn)
* Added Django 1.6b to testrunner and adapted the test cases to support Django 1.6's new test discovery
* Added German translations. (Thanks @digi604)
* Frozen the version of Pillow to 2.0.0, as 2.1.0 seems to be truncating the output image -- Issue #44, Thanks @andruby
* Added Polish translations. (Thanks @stilzdev)

Version 0.3.8
-------------
* Fixed a critical bug (Issue #40) that would generate two captcha objects, and the test would always fail. Thanks @pengqi for the heads-up.


Version 0.3.7
-------------
* Improved Django 1.5 and Django HEAD (1.6) compatibility (thanks @uruz)