@@ -1,0 +1,21 @@
+"""
+Django migrations for django-simple-captcha app
+
+This package does not contain South migrations.  South migrations can be found
+in the ``south_migrations`` package.
+"""
+
+SOUTH_ERROR_MESSAGE = """\n
+For South support, customize the SOUTH_MIGRATION_MODULES setting like so:
+
+    SOUTH_MIGRATION_MODULES = {
+        'captcha': 'captcha.south_migrations',
+    }
+"""
+
+# Ensure the user is not using Django 1.6 or below with South
+try:
+    from django.db import migrations  # noqa
+except ImportError:
+    from django.core.exceptions import ImproperlyConfigured
+    raise ImproperlyConfigured(SOUTH_ERROR_MESSAGE)
